[project]
name = "api-guardiansofthegalaxy"
version = "0.1.0"
description = ""
authors = [
    {name = "KaioMendonca",email = "kaiomendonca.dev@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pydantic (>=2.13.2,<3.0.0)",
    "supabase (>=2.28.3,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
